# iflow-cli-action

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tocignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  IFLOW.md  README.md  README_zh.md  action.yml  generate_toc.py  iflow-settings.schema.json  release.Dockerfile
.github/workflows/: deploy-homepage.yml  iflow-cli-assistant.yml  iflow-with-mcp.yml  issue-killer.yml  issue-triage.yaml  pr-review-killer.yml  pr-review.yml  release-ci-image.yml  release-rust.yml  test.yml  unittest.yml
.iflow/commands/: create-prd.md  generate-tasks.md  process-task-list.md
cmd/: root.go  root_test.go
docs/: DeepDive.md  DeepDive_en.md
examples/: README.md  README_zh.md  documentation.yml  extra-args.yml  issue-killer.yml  issue-triage.yaml  pr-review.yml
internal/app/: app.go  app_test.go
internal/config/: config.go  config_test.go
internal/errors/: errors.go  errors_test.go
internal/github/: actions.go  mock_actions.go
internal/iflow/: client.go  client_test.go  session.go
src/: config.rs  executor.rs  github_actions.rs  lib.rs  main.rs  version_mgr.rs
src/cli/: args.rs  mod.rs  validation.rs
src/github/: mod.rs  outputs.rs  summary.rs
src/iflow/: acp_client.rs  config.rs  mod.rs
tests/: e2e.rs  unit_tests.rs
