[package]
name = "iflow-cli-action"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
serde_json = "1.0"
dirs = "5.0"
tempfile = "3.0"
# iFlow CLI SDK dependencies
# iflow-cli-sdk-rust = { path = "./iflow-cli-sdk-rust" }
iflow-cli-sdk-rust = { git = "https://github.com/vibe-ideas/iflow-cli-sdk-rust" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "iflow-cli-action"
path = "src/main.rs"