[package]
name = "iflow-cli-action"
version = "2.0.0"
edition = "2024"

[lib]
name = "iflow_cli_action"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde_json = "1.0"
dirs = "6.0"
tempfile = "3.23"
# iFlow CLI SDK dependencies
# iflow-cli-sdk-rust = { path = "./iflow-cli-sdk-rust" }
iflow-cli-sdk-rust = { version = "0.1.4" }
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.23"

[[bin]]
name = "iflow-cli-action"
path = "src/main.rs"
